--- a/markup/components/header/header.pug
+++ b/markup/components/header/header.pug
@@ -39,7 +39,7 @@ mixin header(isSignIn, urls)
           .-header.__hidden
             .__hidden-top
               .__location.dropdown
-                .btn.dropdown-toggle(data-toggle='dropdown')
+                button.btn.dropdown-toggle(type='button' data-toggle='dropdown')
                   span.btn__icon.icon-location-inv.hidden-md.hidden-lg
                   span.btn__label
                     span.hidden-xs.hidden-sm Ваш город:&nbsp;&nbsp;
