--- a/markup/components/product-item/product-item.styl
+++ b/markup/components/product-item/product-item.styl
@@ -67,6 +67,8 @@
     font-size 21px
     line-height 1em
     text-overflow ellipsis
+    .rouble
+      margin-left 4px
     &_old
       color #474747
       font-size 16px
