--- a/app_components/bootstrap/css/variables.styl
+++ b/app_components/bootstrap/css/variables.styl
@@ -88,6 +88,8 @@ $headings-color ?=         inherit
 
 $transition-duration-base ?= 0.2s
 
+$media-retina ?=           unquote('(-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 120dpi)')
+
 
 //== Iconography
 //
@@ -324,7 +326,7 @@ $screen-desktop ?=           $screen-md-min
 
 // Large screen / wide desktop
 //** Deprecated `$screen-lg` as of v3.0.1
-$screen-lg ?=                1200px
+$screen-lg ?=                1170px
 $screen-lg-min ?=            $screen-lg
 //** Deprecated `$screen-lg-desktop` as of v3.0.1
 $screen-lg-desktop ?=        $screen-lg-min
