--- a/markup/components/btn/btn.styl
+++ b/markup/components/btn/btn.styl
@@ -3,8 +3,8 @@
     display block
     text-overflow ellipsis
   &__icon
-    flex none
     display block
+    flex none
   &_1
     color white
     font-weight 700
@@ -55,3 +55,21 @@
     &.focus
       color white
       background-color #939393
+
+  &_4
+    color white
+    font-weight 700
+    font-size 13px
+    line-height 1.1em
+    text-transform uppercase
+    padding 12px 15px
+    background-color $green-5
+    border-radius 2px
+    &:hover,
+    &:focus,
+    &.focus
+      color white
+      background-color $green-4
+    &:active,
+    &.active
+      box-shadow inset 0 3px 5px rgba(0, 0, 0, .125)
