--- a/markup/components/grid/grid.styl
+++ b/markup/components/grid/grid.styl
@@ -2,6 +2,11 @@
   &_1
     & {$p}__col
       padding 0 10px
+
+  &_2
+    & {$p}__col
+      padding 0 10px
+
   @media (min-width $screen-md-min)
     &_1
       >.row
@@ -15,3 +20,17 @@
         &_2
           flex 1 1 auto
           overflow hidden
+
+    &_2
+      >.row
+        display flex
+        &:before, &:after
+          content normal
+      & {$p}__col
+        flex none
+        &_1
+          width percentage(622/1170)
+        &_2
+          width percentage(313/1170)
+        &_3
+          width percentage((1170 - 622 - 313)/1170)
