--- a/markup/static/fonts/fontello/fontello.css
+++ b/markup/static/fonts/fontello/fontello.css
@@ -30,6 +30,7 @@
   /* speak: none; only necessary if not using the private unicode range (firstGlyph option) */
   text-decoration: none;
   text-transform: none;
+  display: inline-block;
   vertical-align: top;
 }
  
