--- a/app_components/bootstrap/css/variables.styl
+++ b/app_components/bootstrap/css/variables.styl
@@ -31,6 +31,8 @@ $green-7 ?=             #9edb47
 $brown-1 ?=             #935e43
 $brown-2 ?=             #7c4a30
 
+$gray-1 ?=              #747474
+
 $red-1 ?=               #c10311
 
 $black-1 ?=             #2c2c2c
