--- a/markup/components/menu/menu.pug
+++ b/markup/components/menu/menu.pug
@@ -25,5 +25,5 @@ mixin menu(menuList, urls)
                 a.__btn._lvl_2(href= itemInner.url)
                   span.__label._lvl_2= itemInner.title
                   span.__icon._lvl_2 &nbsp;
-    +menu-catalogue(menuCatalogueList)
+    +menu-catalogue(menuCatalogueList, urls)
   // /Menu
