--- a/markup/components/slider-main/slider-main.styl
+++ b/markup/components/slider-main/slider-main.styl
@@ -1,6 +1,6 @@
 .slider-main
   height calc(50vh - 51px)
-  margin 0 -10px
+  margin -20px -10px 0
   background-color #dddbdb
 
   p
@@ -55,9 +55,10 @@
     max-height (29/18)em*3
 
   @media (min-width $screen-sm-min)
-    //
+    height 400px
 
   @media (min-width $screen-md-min)
     height 400px
-    margin 0
+    margin-left 0
+    margin-right 0
     border 1px solid #ddd
