--- a/app_components/bootstrap/css/mixins.styl
+++ b/app_components/bootstrap/css/mixins.styl
@@ -21,6 +21,12 @@ inline-svg(str)
 
 $p = '^[0]'
 
+disabled()
+  cursor $cursor-disabled
+  opacity 0.5
+  box-shadow none
+  pointer-events none
+
 
 // Utilities
 
