--- a/markup/components/checkbox/checkbox.styl
+++ b/markup/components/checkbox/checkbox.styl
@@ -1,48 +1,48 @@
 .checkbox
   display inline-flex
   vertical-align top
-  position relative
   align-items flex-start
-  padding-left 30px
-  line-height ($line-height-base)em
-  color $text-color
-  &__ctrl
+  color $gray-1
+  font-size 14px
+  line-height (18/14)em
+  position relative
+  margin-left 24px
+
+  &__icon
+    flex none
+    color white
+    text-align center
+    square 14px
+    position absolute
+    top (18/14/2)em
+    left -24px
+    margin -7px 0
+    background-color white
+    border 1px solid #e5e5e5
+    border-radius 2px
+    cursor pointer
+    transition $transition-base
+    &:before
+      font-size 13px
+      line-height 12px
+
+  &__label
+    flex 1 1 auto
+    overflow hidden
+
+  &__input
     clip rect(0, 0, 0, 0)
     position absolute
     width 0
     height 0
     &:focus
-      &+{$p}__fake
-        border-color $blue-1
+      &+{$p}__icon
+        border-color #b9b9b9
     &:checked
-      &+{$p}__fake
-        &:before
-          opacity 1
-    &.disabled,
-    &[disabled],
-    fieldset[disabled] &
-      &~{$p}__fake, &~{$p}__label
-        cursor $cursor-disabled
-        opacity 0.5
-        box-shadow none
-        pointer-events none
-  &__fake
-    position absolute
-    top ($line-height-base/2)em
-    left 0
-    display flex
-    justify-content center
-    align-items center
-    width 20px
-    height 20px
-    margin -10px 0
-    border 2px solid #cfd9e0
-    cursor pointer
-    transition 0.15s
-    &:before
-      opacity 0
-      font-size 12px
-      line-height 1
-      transition inherit
-  &__label
-    overflow hidden
+      &+{$p}__icon
+        background-color $green-1
+        border-color $green-1
+
+      &:focus
+        &+{$p}__icon
+          border-color $green-2
