--- a/markup/components/form-label/form-label.styl
+++ b/markup/components/form-label/form-label.styl
@@ -1,4 +1,6 @@
 .form-label
-  font-size 18px
-  &__inner
-    margin-left 20px
+  font-size 13px
+  &__text
+    display inline-block
+    vertical-align bottom
+    margin-bottom 8px
