--- a/markup/components/form-row/form-row.styl
+++ b/markup/components/form-row/form-row.styl
@@ -1,10 +1,8 @@
 .form-row
-  margin-bottom 13px
-  .form-field
-    display block
-    width 100%
-    margin-top 5px
-  &_btns
-    margin-top -3px
-    .btn
-      width 100%
+  &~&
+    margin-top 15px
+
+  &__checkbox
+    font-size 0
+    &~&
+      margin-top 16px
