--- a/markup/components/menu-catalogue/menu-catalogue.styl
+++ b/markup/components/menu-catalogue/menu-catalogue.styl
@@ -62,6 +62,14 @@
         &+&
           border-top 1px solid #e5e5e5
 
+      &_current
+        &>{$p}__btn
+          &_lvl_2
+            color $green-6
+            background-color #f9f9f9
+            &:before
+              border-right-color $green-1
+
     &__btn
       padding 16px 15px
 
