--- a/markup/components/product-item/product-item.styl
+++ b/markup/components/product-item/product-item.styl
@@ -25,8 +25,7 @@
     overflow hidden
 
   &__img
-    max-width 100%
-    max-height 100%
+    width 100%
     position absolute
     top 0
     right 0
