--- a/markup/helpers/variables.pug
+++ b/markup/helpers/variables.pug
@@ -4,7 +4,8 @@
   var pages = {
     home: {title: 'List of pages', url: 'home.html'},
     index: {title: 'Main', url: 'index.html'},
-    indexSignedIn: {title: 'Signed In and Active Cart/Favorites', url: 'index-signed-in.html'}
+    indexSignedIn: {title: 'Signed In and Active Cart/Favorites', url: 'index-signed-in.html'},
+    catalogue: {title: 'Catalogue', url: 'catalogue.html'}
   };
 
   var modals = {
