--- a/markup/components/form-subscribe/form-subscribe.pug
+++ b/markup/components/form-subscribe/form-subscribe.pug
@@ -3,5 +3,5 @@ mixin form-subscribe()
   form.-form-subscribe(action='')&attributes(attributes)
     .__title Узнайте о новых поступлениях
     input.__field(type='email' placeholder='Введите E-mail')
-    button.__btn.btn.btn_4 #[span.btn__label Отправить]
+    button.__btn.btn.btn_4(type='submit') #[span.btn__label Отправить]
   // /Form-subscribe
