--- a/markup/components/product-item/product-item.styl
+++ b/markup/components/product-item/product-item.styl
@@ -17,7 +17,7 @@
         opacity 1
 
   &__img-wrap
-    margin 25px 15.61%
+    margin 24px 15.61%
 
   &__img-wrap-inner
     position relative
@@ -25,13 +25,9 @@
     overflow hidden
 
   &__img
-    width 100%
     position absolute
     top 0
-    right 0
-    bottom 0
     left 0
-    margin auto
 
   &__title
     margin 0 0 10px
@@ -51,6 +47,8 @@
     li
       margin 0
       text-overflow ellipsis
+      &:before
+        content normal
 
   &__footer
     margin-top 30px
