--- a/markup/components/section-instagram/section-instagram.styl
+++ b/markup/components/section-instagram/section-instagram.styl
@@ -30,6 +30,7 @@
   &__photo-list-inner
     display flex
     flex-flow row wrap
+    align-items flex-start
     margin 0 -10px
 
   &__photo-item
