--- a/markup/components/select/select.styl
+++ b/markup/components/select/select.styl
@@ -8,14 +8,15 @@
     cursor pointer
     &:after
       flex none
-      width 25px
+      width 22px
       content '\e93a'
       font-family 'fontello'
       font-size 15px
       color #747474
       text-align center
+      margin 1px 0 0
     &.ik_select_link_focus
-      z-index 9999
+      z-index auto
   .ik_select_link_text
     flex 1 1 auto
     text-overflow ellipsis
@@ -51,7 +52,7 @@
     .ik_select_list
       overflow hidden
       border 1px solid #e5e5e5
-      margin-top -1px
+      margin-top 0
       background-color white
       border-radius 0 0 2px 2px
     ul
