--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -42,17 +42,17 @@ include ../components/section-instagram/section-instagram
             section.-section._1
               header.__header
                 h2.__title: span.__title-inner Новинки
-              +products-list(productsList, 'new', true)._slick.slick-slider
+              +products-list(productsList, 'new', true)
 
             section.-section._1
               header.__header
                 h2.__title: span.__title-inner Хиты продаж
-              +products-list(productsList, 'hit', true)._slick.slick-slider
+              +products-list(productsList, 'hit', true)
 
             section.-section._1
               header.__header
                 h2.__title: span.__title-inner Распродажа
-              +products-list(productsList, 'sale', true)._slick.slick-slider
+              +products-list(productsList, 'sale', true)
 
             +section-instagram()
 
