--- a/markup/components/aside/aside.styl
+++ b/markup/components/aside/aside.styl
@@ -1,5 +1,5 @@
 .aside
-  padding 0 15px 20px
+  padding 12px 15px 20px
   margin-bottom 20px
   background-color #f9f9f9
   border 1px solid #d4d4d4
@@ -8,7 +8,7 @@
   &__header
     color white
     padding 16px 15px
-    margin -1px -16px 15px
+    margin -13px -16px 12px
     background-color $green-1
 
   &__title
