--- a/markup/components/breadcrumbs/breadcrumbs.pug
+++ b/markup/components/breadcrumbs/breadcrumbs.pug
@@ -3,15 +3,12 @@ mixin breadcrumbs(data)
   nav.-breadcrumbs&attributes(attributes)
     span.__item
       +a(pages.index.url).__label= 'Главная'
-      span.__icon.icon.icon-angle-right-2
+      span.__icon.icon-right-open-mini
     each item, index in data
       span.__item
         if index !== data.length - 1
           +a(item.url).__label= item.title
-          span.__icon.icon.icon-angle-right-2
+          span.__icon.icon-right-open-mini
         else
-          span.__label= item.title
+          +a(item.url).__label= item.title
   // /Breadcrumbs
-
-
-
