--- a/markup/components/breadcrumbs/breadcrumbs.styl
+++ b/markup/components/breadcrumbs/breadcrumbs.styl
@@ -1,29 +1,17 @@
 .breadcrumbs
-  color #888
-  font-weight 500
-  font-size 12px
-  line-height 2em
-  text-transform uppercase
-  padding 13px 20px 0
-  margin 13px -20px -2px
-  border-top 1px solid #ececec
-  &__item
-    display inline
-  &__label
-    a&
-      color inherit
-      text-decoration none
-      &:hover, &:focus
-        color $red-1
-        text-decoration none
+  color $gray-1
+  font-size 13px
+  line-height (18/13em)
+  margin 0 0 20px
+
   &__icon
-    color #686868
-    font-size 10px
+    display inline-block
+    vertical-align middle
+    line-height 1
     margin 0 10px
 
-  @media (min-width $screen-sm-min)
-    width 100%
-    padding 0
-    margin -3px 0 -2px
-    border-top 0
-    text-align right
+  &__label
+    color inherit
+    text-decoration none
+    &:hover, &:focus
+      color $green-1
