--- a/markup/components/btn/btn.styl
+++ b/markup/components/btn/btn.styl
@@ -2,9 +2,11 @@
   &__label
     display block
     text-overflow ellipsis
+
   &__icon
     display block
     flex none
+
   &_1
     color white
     font-weight 700
@@ -70,6 +72,34 @@
     &.focus
       color white
       background-color $green-4
+    &:active,
+    &.active
+      box-shadow inset 0 3px 5px rgba(0, 0, 0, .125)
+
+  &_5
+    color $brown-1
+    font-weight 400
+    font-size 14px
+    line-height 1.1em
+    padding 7px 0 8px
+    &:hover,
+    &:focus,
+    &.focus
+      color $brown-2
+
+  &_6
+    color white
+    font-weight 400
+    font-size 14px
+    line-height 1.1em
+    padding 7px 15px 8px
+    background-color $green-3
+    border-radius 2px
+    &:hover,
+    &:focus,
+    &.focus
+      color white
+      background-color $green-1
     &:active,
     &.active
       box-shadow inset 0 3px 5px rgba(0, 0, 0, .125)
