--- a/markup/components/form-row/form-row.styl
+++ b/markup/components/form-row/form-row.styl
@@ -1,8 +1,12 @@
 .form-row
+  position relative
   &~&
     margin-top 15px
 
-  &__checkbox
+  &_checkbox
     font-size 0
     &~&
       margin-top 16px
+
+  &_position-label
+    position relative
