--- a/markup/components/product-item/product-item.pug
+++ b/markup/components/product-item/product-item.pug
@@ -19,6 +19,7 @@ mixin product-item(item, category, slick)
               'static/img/content/products-list/260x260/' + item.src + '-260x260.jpg 1.25x'
               title=item.title
               alt=item.title
+              data-object-fit='contain' onload='objectFit(this)'
             )
           else
             img.__img(
@@ -27,12 +28,14 @@ mixin product-item(item, category, slick)
               'static/img/content/products-list/260x260/' + item.src + '-260x260.jpg 1.25x'
               title=item.title
               alt=item.title
+              data-object-fit='contain' onload='objectFit(this)'
             )
-      h3.__title !{item.title}
-      ul.__properties
-        li 50 гр / 90 м
-        li 49 % мериносовая шерсть
-        li 51% акрил
+      .__col._center
+        h3.__title !{item.title}
+        ul.__properties
+          li 50 гр / 90 м
+          li 49 % мериносовая шерсть
+          li 51% акрил
       footer.__footer
         .__price-box
           if category !== 'new'
@@ -40,8 +43,8 @@ mixin product-item(item, category, slick)
             br
           .__price !{item.price[1]}#[span.rouble a]
         if item.incart
-          button.btn.btn_2.__status(type='button') #[span.btn__label] В корзине
+          button.btn.btn_2.__status(type='button') #[span.btn__label В корзине]
         else if !item.available
-          button.btn.btn_3.__status(type='button') #[span.btn__label] Нет в наличии
+          button.btn.btn_3.__status(type='button') #[span.btn__label Нет в наличии]
         else
-          button.btn.btn_1.__status(type='button') #[span.btn__label] В корзину
+          button.btn.btn_1.__status(type='button') #[span.btn__label В корзину]
