--- a/app_components/bootstrap/css/index.styl
+++ b/app_components/bootstrap/css/index.styl
@@ -27,7 +27,7 @@
 @import "app_components/bootstrap/css/dropdowns"
 //@import "./app_components/bootstrap/css/button-groups"
 //@import "./app_components/bootstrap/css/input-groups"
-//@import "./app_components/bootstrap/css/navs"
+@import "./app_components/bootstrap/css/navs"
 //@import "./app_components/bootstrap/css/navbar"
 //@import "./app_components/bootstrap/css/breadcrumbs"
 //@import "./app_components/bootstrap/css/pagination"
