--- a/app_components/bootstrap/css/variables.styl
+++ b/app_components/bootstrap/css/variables.styl
@@ -99,7 +99,7 @@ $font-weight-base ?=       400
 $headings-font-family ?=   $font-family-sans-serif
 $headings-font-weight ?=   700
 $headings-line-height ?=   1.25
-$headings-color ?=         inherit
+$headings-color ?=         $text-color
 
 $transition-timing-function-base ?= ease
 $transition-duration-base ?= 0.2s
