--- a/markup/components/breadcrumbs/breadcrumbs.styl
+++ b/markup/components/breadcrumbs/breadcrumbs.styl
@@ -2,7 +2,7 @@
   color $gray-1
   font-size 13px
   line-height (18/13em)
-  margin 0 0 20px
+  margin 0 0 1.435897435897436rem
 
   &__icon
     display inline-block
