--- a/markup/components/set-display/set-display.pug
+++ b/markup/components/set-display/set-display.pug
@@ -13,8 +13,8 @@ mixin set-display()
         span.__text Показывать
         select.-select(data-linkcustomclass='text-field' data-ddcustomclass='select__dd')
           option(selected) 12
-          option(selected) 24
-          option(selected) 36
+          option 24
+          option 36
     .__col._3.hidden-xs
       +a().__view._list._active.btn.icon-th-list-4(data-view='list')
       +a().__view._grid.btn.icon-th-3(data-view='grid')
