--- a/markup/helpers/variables.pug
+++ b/markup/helpers/variables.pug
@@ -5,7 +5,8 @@
     home: {title: 'List of pages', url: 'home.html'},
     index: {title: 'Main', url: 'index.html'},
     indexSignedIn: {title: 'Signed In and Active Cart/Favorites', url: 'index-signed-in.html'},
-    catalogue: {title: 'Catalogue', url: 'catalogue.html'}
+    catalogue: {title: 'Catalogue', url: 'catalogue.html'},
+    card: {title: 'Card', url: 'card.html'}
   };
 
   var modals = {
