--- a/markup/components/table-wrap/table-wrap.styl
+++ b/markup/components/table-wrap/table-wrap.styl
@@ -1,6 +1,3 @@
 .table-wrap
-  margin 30px -15px
-
-  @media (min-width $screen-sm-min)
-    margin-left 0
-    margin-right 0
+  margin rem-calc(30) 0
+  overflow-x auto
