--- a/markup/pages/card.pug
+++ b/markup/pages/card.pug
@@ -32,7 +32,7 @@ include ../components/counter/counter
               .row
                 .col-xs-12.col-sm-6
                   .-slider-product-card
-                    .__main.slick-slider
+                    .__main.slick-slider(data-article='арт. 14176')
                       .slick-slide.loading.loading_before
                         .-slider-product-card.__main-item
                           img.__main-img(
